--- a/hacker-chat/client/package.json
+++ b/hacker-chat/client/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "src",
+  "name": "@meunomusuarionpm/hacker-chat-client",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "type": "module",
+	"bin": {
+		"hacker-chat": "index.js"
+	},
   "scripts": {
     "start": "node index.js",
 		"user01": "node index.js --username erickwendel --room sala01 --hostUri http://localhost:9898",
     "user02": "node index.js --username mariazinha --room sala01 --hostUri http://localhost:9898",
-    "user03": "node index.js --username mariazinha --room sala01 --hostUri http://localhost:9898",
+    "user03": "node index.js --username joao09 --room sala02 --hostUri http://localhost:9898",
+    "user04": "node index.js --username ani01 --room sala02 --hostUri http://localhost:9898",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
